--- a/index.html
+++ b/index.html
@@ -7,32 +7,68 @@
     <title>Sarafan</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <p>Новинки</p>
-        <p>Одежда</p>
-        <p>Аксессуары</p>
-        <p>Sale</p>
-        <ol>
-          <li>1</li>
-          <li>2</li>
-          <li></li>
-          <li>3</li>
-          <li>5</li>
-        </ol>
-        <table>
-          <thead>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-          </thead>
-          <tbody>
-            <th>2</th>
-            <th>1</th>
-            <th>3</th>
-          </tbody>
-        </table>
-      </nav>
-    </header>
+    <div class="new-collection-group">
+      <h1 class="new-collection">New-collection</h1>
+      <div class="product-group">
+        <div class="product-card">
+          <img
+            class="photo-card"
+            src="./images/1.jfif"
+            alt="Платье в полоску с запахом"
+          />
+          <img class="like" src="./images/Frame-3svg.svg" alt="понравилось" />
+          <p>Платье в полоску с запахом</p>
+          <p>6 999 Руб.</p>
+        </div>
+        <div class="product-card">
+          <img class="photo-card" src="./images/2.jfif" alt="Объемный пиджак" />
+          <img class="like" src="./images/Frame-3svg.svg" alt="понравилось" />
+          <p>Объемный пиджак</p>
+          <p>12 999Руб.</p>
+        </div>
+        <div class="product-card">
+          <img
+            class="photo-card"
+            src="./images/3.jfif"
+            alt="Комбинизон с принтом"
+          />
+          <img class="like" src="./images/Frame-3svg.svg" alt="понравилось" />
+          <p>Комбинизон с принтом</p>
+          <p>6 999Руб.</p>
+        </div>
+        <div class="product-card">
+          <img
+            class="photo-card"
+            src="./images/4.jfif"
+            alt="Атласный топ-комбинация"
+          />
+          <img class="like" src="./images/Frame-3svg.svg" alt="понравилось" />
+          <p>Атласный топ-комбинация</p>
+          <p>2 799Руб.</p>
+        </div>
+        <div class="product-group-big">
+          <div class="product-card-big">
+            <img
+              class="big-photo-card"
+              src="./images/5.jfif"
+              alt="Блейзер с декоративными пуговицами"
+            />
+            <img class="like" src="./images/Frame-3svg.svg" alt="понравилось" />
+            <p>Блейзер с декоративными пуговицами</p>
+            <p>9 999 руб.</p>
+          </div>
+          <div class="product-card-big">
+            <img
+              class="big-photo-card"
+              src="./images/6.jfif"
+              alt="Блейзер с декоративными пуговицами"
+            />
+            <img class="like" src="./images/Frame-3svg.svg" alt="понравилось" />
+            <p>Блейзер с декоративными пуговицами</p>
+            <p>9 999 руб.</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
