--- a/index.html
+++ b/index.html
@@ -6,33 +6,5 @@
     <link rel="stylesheet" href="./css/index.css" />
     <title>Sarafan</title>
   </head>
-  <body>
-    <header>
-      <nav>
-        <p>Новинки</p>
-        <p>Одежда</p>
-        <p>Аксессуары</p>
-        <p>Sale</p>
-        <ol>
-          <li>1</li>
-          <li>2</li>
-          <li></li>
-          <li>3</li>
-          <li>5</li>
-        </ol>
-        <table>
-          <thead>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-          </thead>
-          <tbody>
-            <th>2</th>
-            <th>1</th>
-            <th>3</th>
-          </tbody>
-        </table>
-      </nav>
-    </header>
-  </body>
+  <body></body>
 </html>
