autumn-collection/ws-155

--- a/index.html
+++ b/index.html
@@ -3,8 +3,50 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./css/index.css" />
     <title>Sarafan</title>
   </head>
-  <body></body>
+  <body>
+    <div class="conteiner autumn">
+      <div class="autumn-collection">
+        <h2 class="collection-title">Вдохновленные весной</h2>
+        <div class="about-conteiner">
+          <p class="collection-about">
+            Разнообразный и богатый опыт рамки и место обучения кадров
+            способствует подготовки и реализации форм развития. С другой стороны
+            реализация намеченных плановых
+          </p>
+          <p class="button-about">О бренде</p>
+        </div>
+      </div>
+
+      <div class="photo-collection">
+        <img class="photo1" src="./images/image 1.png" alt="Фото топов" />
+        <img class="photo2" src="./images/Rectangle 4.png" alt="Фото топов" />
+      </div>
+    </div>
+    <div class="mobile">
+      <h2 class="collection-title">Вдохновленные весной</h2>
+      <img
+        class="mobile-photo"
+        src="./images/image 1.png"
+        alt="mobile__photo"
+      />
+      <div class="conteaner-about">
+        <p class="collection-about">
+          Разнообразный и богатый опыт рамки и место обучения кадров
+          способствует подготовки и реализации форм развития. С другой стороны
+          реализация намеченных плановых
+        </p>
+        <p class="button-about">О бренде</p>
+      </div>
+    </div>
+  </body>
 </html>
