--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <p class="collection-about">
             Разнообразный и богатый опыт рамки и место обучения кадров
             способствует подготовки и реализации форм развития. С другой стороны
-            реализация намеченных плановых
+            реализация намеченных плановых.
           </p>
           <p class="button-about">О бренде</p>
         </div>
