--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       </div>
     </div>
     <div class="mobile">
-      <h2 class="collection-title">Вдохновленные весной</h2>
+      <!-- here error -->
+      <h2 class="colection">Вдохновленные весной</h2>
       <img
         class="mobile-photo"
         src="./images/image 1.png"
