--- a/index.html
+++ b/index.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/index.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
     <title>Sarafan</title>
   </head>
   <body>
-    <div class="collection">
+    <div class="container">
       <div class="mobile-title">
         <h2 class="collection__title">New Collection</h2>
-        <p class="all-collection">
+        <p class="button-all-collection">
           Все
           <svg
             class="arrow"
@@ -38,7 +32,7 @@
           <div class="product-card__image-wrapper">
             <img
               class="product-card__image"
-              src="./images/1.jfif"
+              src="./images/new-collection/1.png"
               alt="Платье в полоску с запахом"
             />
             <button class="product-card__like">
@@ -59,15 +53,15 @@
               </svg>
             </button>
           </div>
-          <p class="product-card__name">Платье в полоску с запахом</p>
-          <p class="product-card__price">6 999 руб.</p>
+          <h3 class="product-card__name">Платье в полоску с запахом</h3>
+          <h3 class="product-card__price">6 999 руб.</h3>
         </div>
 
         <div class="product-card">
           <div class="product-card__image-wrapper">
             <img
               class="product-card__image"
-              src="./images/2.jfif"
+              src="./images/new-collection/2.png"
               alt="Объемный пиджак"
             />
             <button class="product-card__like">
@@ -88,15 +82,15 @@
               </svg>
             </button>
           </div>
-          <p class="product-card__name">Объемный пиджак</p>
-          <p class="product-card__price">12 999 руб.</p>
+          <h3 class="product-card__name">Объемный пиджак</h3>
+          <h3 class="product-card__price">12 999 руб.</h3>
         </div>
 
         <div class="product-card">
           <div class="product-card__image-wrapper">
             <img
               class="product-card__image"
-              src="./images/3.jfif"
+              src="./images/new-collection/3.png"
               alt="Комбинизон с принтом"
             />
             <button class="product-card__like">
@@ -117,15 +111,15 @@
               </svg>
             </button>
           </div>
-          <p class="product-card__name">Комбинизон с принтом</p>
-          <p class="product-card__price">6 999 руб.</p>
+          <h3 class="product-card__name">Комбинизон с принтом</h3>
+          <h3 class="product-card__price">6 999 руб.</h3>
         </div>
 
         <div class="product-card">
           <div class="product-card__image-wrapper">
             <img
               class="product-card__image"
-              src="./images/4.jfif"
+              src="./images/new-collection/4.png"
               alt="Атласный топ-комбинация"
             />
             <button class="product-card__like">
@@ -146,16 +140,16 @@
               </svg>
             </button>
           </div>
-          <p class="product-card__name">Атласный топ-комбинация</p>
-          <p class="product-card__price">2 799 руб.</p>
+          <h3 class="product-card__name">Атласный топ-комбинация</h3>
+          <h3 class="product-card__price">2 799 руб.</h3>
         </div>
       </div>
       <div class="collection__products-big">
-        <div class="product-card product-card--big">
+        <div class="product-card--big">
           <div class="product-card__image-wrapper">
             <img
               class="product-card__image product-card__image--big"
-              src="./images/5.jfif"
+              src="./images/new-collection/5.png"
               alt="Блейзер с декоративными пуговицами (черный)"
             />
             <button class="product-card__like">
@@ -176,15 +170,15 @@
               </svg>
             </button>
           </div>
-          <p class="product-card__name">Блейзер с декоративными пуговицами</p>
-          <p class="product-card__price">9 999 руб.</p>
+          <h3 class="product-card__name">Блейзер с декоративными пуговицами</h3>
+          <h3 class="product-card__price">9 999 руб.</h3>
         </div>
 
-        <div class="product-card product-card--big">
+        <div class="product-card--big">
           <div class="product-card__image-wrapper">
             <img
               class="product-card__image product-card__image--big"
-              src="./images/6.jfif"
+              src="./images/new-collection/6.png"
               alt="Блейзер с декоративными пуговицами (бежевый)"
             />
             <button class="product-card__like">
@@ -205,8 +199,8 @@
               </svg>
             </button>
           </div>
-          <p class="product-card__name">Блейзер с декоративными пуговицами</p>
-          <p class="product-card__price">9 999 руб.</p>
+          <h3 class="product-card__name">Блейзер с декоративными пуговицами</h3>
+          <h3 class="product-card__price">9 999 руб.</h3>
         </div>
       </div>
     </div>
