future-autumn-collection

--- a/index.html
+++ b/index.html
@@ -14,39 +14,39 @@
     <title>Sarafan</title>
   </head>
   <body>
-    <div class="conteiner autumn">
-      <div class="autumn-collection">
-        <h2 class="collection-title">Вдохновленные весной</h2>
-        <div class="about-conteiner">
-          <p class="collection-about">
+    <div class="container autumn">
+      <div class="title-about">
+        <h2 class="title">Вдохновленные весной</h2>
+        <div class="about">
+          <p class="text-about">
             Разнообразный и богатый опыт рамки и место обучения кадров
             способствует подготовки и реализации форм развития. С другой стороны
-            реализация намеченных плановых.
+            реализация намеченных плановых
           </p>
-          <p class="button-about">О бренде</p>
+          <p class="buttom-about">О бренде</p>
         </div>
       </div>
-
       <div class="photo-collection">
-        <img class="photo1" src="./images/image 1.png" alt="Фото топов" />
-        <img class="photo2" src="./images/Rectangle 4.png" alt="Фото топов" />
+        <img class="left-photo" src="./images/image 1.png" alt="Фото на руке" />
+        <img
+          class="right-photo"
+          src="./images/Rectangle 4.png"
+          alt="Вся коллекция"
+        />
       </div>
     </div>
-    <div class="mobile">
-      <!-- here error -->
-      <h2 class="colection">Вдохновленные весной</h2>
-      <img
-        class="mobile-photo"
-        src="./images/image 1.png"
-        alt="mobile__photo"
-      />
-      <div class="conteaner-about">
-        <p class="collection-about">
+    <div class="for-mobile">
+      <h2 class="title-mobile">Вдохновленные весной</h2>
+      <div class="photo">
+        <img class="mobile-photo" src="./images/image 1.png" alt="" />
+      </div>
+      <div class="mobile-about__text">
+        <p class="mobile-about-text">
           Разнообразный и богатый опыт рамки и место обучения кадров
           способствует подготовки и реализации форм развития. С другой стороны
           реализация намеченных плановых
         </p>
-        <p class="button-about">О бренде</p>
+        <p class="mobile-bottom-about">О бренде</p>
       </div>
     </div>
   </body>
