future-autumn-collection

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <img class="mobile-photo" src="./images/image 1.png" alt="" />
       </div>
       <div class="mobile-about__text">
-        <p class="mobile-about-text">
+        <p class="mobile-about__item">
           Разнообразный и богатый опыт рамки и место обучения кадров
           способствует подготовки и реализации форм развития. С другой стороны
           реализация намеченных плановых
