future-new-collection

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="new-collection__card">
           <img
             class="new-collection__photo"
-            src="./images/new-collection/1.png"
+            src="./images/new-collection/1.jpg"
             alt="Наряд №1"
           />
           <svg
@@ -66,7 +66,7 @@
         <div class="new-collection__card">
           <img
             class="new-collection__photo"
-            src="./images/new-collection/2.png"
+            src="./images/new-collection/2.jpg"
             alt="Наряд №1"
           />
           <svg
@@ -91,7 +91,7 @@
         <div class="new-collection__card">
           <img
             class="new-collection__photo"
-            src="./images/new-collection/3.png"
+            src="./images/new-collection/3.jpg"
             alt="Наряд №1"
           />
           <svg
@@ -116,7 +116,7 @@
         <div class="new-collection__card">
           <img
             class="new-collection__photo"
-            src="./images/new-collection/4.png"
+            src="./images/new-collection/4.jpg"
             alt="Наряд №1"
           />
           <svg
@@ -143,7 +143,7 @@
         <div class="new-collection__card-big">
           <img
             class="new-collection__photo-big"
-            src="./images/new-collection/5.png"
+            src="./images/new-collection/5.jpg"
             alt=""
           />
           <svg
@@ -168,7 +168,7 @@
         <div class="new-collection__card-big">
           <img
             class="new-collection__photo-big"
-            src="./images/new-collection/6.png"
+            src="./images/new-collection/6.jpg"
             alt=""
           />
           <svg
