future new-collection

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <section class="new-collection container">
       <div class="new-collection__title-block">
-        <div class="mobile-title">
+        <div class="mobile-section-title">
           <h2 class="new-collection-title">New collection</h2>
           <p class="mobile-button">
             Все
