ready-all-collection

--- a/index.html
+++ b/index.html
@@ -15,24 +15,22 @@
   <body>
     <section class="new-collection container">
       <div class="new-collection__title-block">
-        <div class="mobile-section-title">
-          <h2 class="new-collection-title">New collection</h2>
-          <p class="mobile-button">
-            Все
-            <svg
-              width="4"
-              height="7"
-              viewBox="0 0 4 7"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M0.643949 6.68725L3.55882 3.69701C3.61002 3.64448 3.63867 3.57404 3.63867 3.50069C3.63867 3.42735 3.61002 3.3569 3.55882 3.30438L0.643949 0.313007C0.620101 0.288514 0.591589 0.269046 0.560094 0.255754C0.528599 0.242461 0.49476 0.235613 0.460575 0.235613C0.426389 0.235613 0.39255 0.242461 0.361055 0.255754C0.32956 0.269046 0.301047 0.288514 0.2772 0.313007C0.228137 0.363237 0.20067 0.430666 0.20067 0.500882C0.20067 0.571097 0.228137 0.638526 0.2772 0.688756L3.01826 3.50069L0.2772 6.31207C0.228305 6.36227 0.200944 6.42958 0.200944 6.49966C0.200944 6.56974 0.228305 6.63705 0.2772 6.68725C0.301047 6.71175 0.32956 6.73121 0.361055 6.74451C0.39255 6.7578 0.426389 6.76465 0.460575 6.76465C0.49476 6.76465 0.528599 6.7578 0.560094 6.74451C0.591589 6.73121 0.620101 6.71175 0.643949 6.68725Z"
-                fill="#2D2D2D"
-              />
-            </svg>
-          </p>
-        </div>
+        <h2 class="new-collection-title">New collection</h2>
+        <a class="mobile-button">
+          Все
+          <svg
+            width="4"
+            height="7"
+            viewBox="0 0 4 7"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M0.643949 6.68725L3.55882 3.69701C3.61002 3.64448 3.63867 3.57404 3.63867 3.50069C3.63867 3.42735 3.61002 3.3569 3.55882 3.30438L0.643949 0.313007C0.620101 0.288514 0.591589 0.269046 0.560094 0.255754C0.528599 0.242461 0.49476 0.235613 0.460575 0.235613C0.426389 0.235613 0.39255 0.242461 0.361055 0.255754C0.32956 0.269046 0.301047 0.288514 0.2772 0.313007C0.228137 0.363237 0.20067 0.430666 0.20067 0.500882C0.20067 0.571097 0.228137 0.638526 0.2772 0.688756L3.01826 3.50069L0.2772 6.31207C0.228305 6.36227 0.200944 6.42958 0.200944 6.49966C0.200944 6.56974 0.228305 6.63705 0.2772 6.68725C0.301047 6.71175 0.32956 6.73121 0.361055 6.74451C0.39255 6.7578 0.426389 6.76465 0.460575 6.76465C0.49476 6.76465 0.528599 6.7578 0.560094 6.74451C0.591589 6.73121 0.620101 6.71175 0.643949 6.68725Z"
+              fill="#2D2D2D"
+            />
+          </svg>
+        </a>
       </div>
 
       <div class="new-collection__cards">
@@ -57,10 +55,8 @@
             />
           </svg>
           <div class="new-collection__card-text">
-            <div class="new-collection__card-name">
-              Платье в полоску с запахом
-            </div>
-            <div class="new-collection__card-price">6 999 руб.</div>
+            <p class="new-collection__card-name">Платье в полоску с запахом</p>
+            <p class="new-collection__card-price">6 999 руб.</p>
           </div>
         </div>
         <div class="new-collection__card">
@@ -84,8 +80,8 @@
             />
           </svg>
           <div class="new-collection__card-text">
-            <div class="new-collection__card-name">Объемный пиджак</div>
-            <div class="new-collection__card-price">12 999 руб.</div>
+            <p class="new-collection__card-name">Объемный пиджак</p>
+            <p class="new-collection__card-price">12 999 руб.</p>
           </div>
         </div>
         <div class="new-collection__card">
@@ -109,8 +105,8 @@
             />
           </svg>
           <div class="new-collection__card-text">
-            <div class="new-collection__card-name">Комбинезон с принтом</div>
-            <div class="new-collection__card-price">6 999 руб.</div>
+            <p class="new-collection__card-name">Комбинезон с принтом</p>
+            <p class="new-collection__card-price">6 999 руб.</p>
           </div>
         </div>
         <div class="new-collection__card">
@@ -134,8 +130,8 @@
             />
           </svg>
           <div class="new-collection__card-text">
-            <div class="new-collection__card-name">Атласный топ-комбинация</div>
-            <div class="new-collection__card-price">2 799 руб.</div>
+            <p class="new-collection__card-name">Атласный топ-комбинация</p>
+            <p class="new-collection__card-price">2 799 руб.</p>
           </div>
         </div>
       </div>
@@ -161,8 +157,8 @@
             />
           </svg>
           <div class="new-collection__card-text">
-            <div class="new-collection__card-name">Комбинезон с принтом</div>
-            <div class="new-collection__card-price">6 999 руб.</div>
+            <p class="new-collection__card-name">Комбинезон с принтом</p>
+            <p class="new-collection__card-price">6 999 руб.</p>
           </div>
         </div>
         <div class="new-collection__card-big">
@@ -186,8 +182,8 @@
             />
           </svg>
           <div class="new-collection__card-text">
-            <div class="new-collection__card-name">Комбинезон с принтом</div>
-            <div class="new-collection__card-price">6 999 руб.</div>
+            <p class="new-collection__card-name">Комбинезон с принтом</p>
+            <p class="new-collection__card-price">6 999 руб.</p>
           </div>
         </div>
       </div>
