--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <img src="../sarafan/img-banner/logo.svg" alt="logo-sarafan" />
         </div>
         <div class="header__button-icons">
-          <input class="input" type="text" />
+          <input class="input" type="text" placeholder="Поиск" />
           <svg
             class="svg-button"
             width="25"
